--- a/style.css
+++ b/style.css
@@ -75,3 +75,19 @@ body {
     line-height: 17px;
 }
 /*--------------------*/
+/*universal-heading styles*/
+.universal-h2 {
+    text-align: center;
+    font-weight: 600;
+    font-size: 22px;
+}
+.universal-h2:after {
+    content: '';
+    display: block;
+    width: 32px;
+    height: 3px;
+    background-color: #292929;
+    margin: 0 auto;
+    margin-top: 6px;
+}
+/*--------------------*/
