--- a/style.css
+++ b/style.css
@@ -91,3 +91,24 @@ body {
     margin-top: 6px;
 }
 /*--------------------*/
+/*Section-contacts styles*/
+.section-contacts {
+    padding-top: 24px;
+}
+.contacts-list {
+    margin-top: 16px;
+}
+.contacts-list li{
+    text-align: center;
+    font-weight: 700;
+    line-height: 21px;
+    letter-spacing: 0.01em;
+    margin-bottom: 6px;
+}
+.contacts-list li:last-child {
+    margin-bottom: 0px;
+}
+.contacts-list li span {
+    font-weight: 500;
+}
+/*--------------------*/
